@@ -1,6 +1,8 @@
 Changelog 2021 Jan 24:
+    -!basic_terminate replaces !basicbot_terminate
     -Message and command interpretation speed improved
     -Instead of using force-delete-ids.txt, the bot removes new messages in channels named 'official-complaints'
+    -Fixed and optimized 'noot'
     -Audio encoding has returned to PCM/MP3 for better volume balancing
     -CPU usage is higher this way, but the volume balancing is better
     -Fixed issue where moving between two BasicBot enabled voice chats prevents a leave message from being sent
